--- a/index.html
+++ b/index.html
@@ -10,25 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <title>Substation Automation</title>
+    <title>Additive Manufacturng Lab</title>
 </head>
 <body>
     <div class="container-fluid" id="main">
         <h1 class="text-center bg-dark text-white pb-3 fixed-top" >Additive Manufacturing Lab</h1>
     </div>
     <div class="container">
-        <!-- <p>Link to Substation Automation Lab: <a href="http://sa-nitk.vlabs.ac.in/index.html" target="blank">Substation Automation Lab</a></p> -->
         <div class="row pt-50" id="cards"> 
         </div>
-        <!-- <div class="row pt-50"> 
-            <div class="col-md-10" id="simMain">
-                <h1>Simulator</h1>
-                <iframe id="simulator" noscroll="" scrolling="no" src="" height="700px" width="1000px"></iframe>
-            </div>
-            <div class="col-md-2">
-                <i class="fad fa-3x fa-arrow-circle-up" title="Move To Top" onclick="moveTop()"></i>
-            </div>
-        </div> -->
     </div>
     
 
